# KubeAI-Doctor

./: README.md
cli/: Cargo.toml
cli/src/: main.rs
