[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
openai-api-rs = "0.1"
clap = { version = "4.5.32", features = ["derive"] }
kube = { version = "0.99.0", features = ["runtime", "client"] }  # Updated
k8s-openapi = { version = "0.24.0", features = ["v1_30"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.97"
colored = "3.0.0"
